--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,40 @@
-<h1>login page</h1>
+{% extends "base.html" %}
+{% block title %} login {% endblock title %}
+{% block content %}
+<div class="d-flex justify-content-center mt-5">
+
+    <form action="/auth/login/" method="POST" class="border p-4 rounded shadow-sm"
+        style="width: 100%; max-width: 400px;">
+
+        {% for message in messages  %}
+    <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+      <strong>{{message}}</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    
+    {% endfor %}
+
+        <h3 class="mb-5 mt-3">Login</h3>
+        {% csrf_token %}
+
+        <div class="form-group mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input class="form-control" type="email" id="email" name="email" placeholder="Enter your email" required>
+        </div>
+
+        <div class="form-group mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input class="form-control" type="password" id="password" name="password" placeholder="Enter your password"
+                required>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+
+        <div class="mt-3 text-center">
+            New user? <a href="/auth/signup/" class="text-decoration-none">signup</a>
+        </div>
+    </form>
+</div>
+
+
+{% endblock content %}
