--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,34 @@
-{% extends "base.html" %}
-{% block title %} Home {% endblock title %}
-{% block content %}
+{% extends "base.html" %} {% block title %} Home {% endblock title %} {% block
+content %} {% for message in messages %}
+<div
+  class="alert alert-{{message.tags}} alert-dismissible fade show"
+  role="alert"
+>
+  <strong>{{message}}</strong>
+  <button
+    type="button"
+    class="btn-close"
+    data-bs-dismiss="alert"
+    aria-label="Close"
+  ></button>
+</div>
+
+{% endfor %} {% block content %}
 
 <h1>Welcome to dhamaka sale</h1>
 
-{% endblock content %}
+{% endblock content %} {% block body %}
 
-{% block body %}
-
-<!-- Hero Section -->
-{% comment %} <section id="hero" class="hero section dark-background">
+<!-- Portfolio Section -->
+<section id="portfolio" class="portfolio section">
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Welcome to Shop</h2>
+    <p>
+      <span>Check Our </span><span class="description-title">Products</span>
       
-  <img src="static/assets/img/hero-bg.jpg" alt="" data-aos="fade-in">
-  
-  <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <h2>Welcome to shopping</h2>
-        <p>We are team of talented designers making websites with Bootstrap</p>
-        <a href="#about" class="btn-get-started">Get Started</a>
-      </div>
-    </div>
+    </p>
   </div>
-  
-</section><!-- /Hero Section --> {% endcomment %}
+</section>
 
 {% endblock body %}
