--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
     <form action="/auth/signup/" method="POST" class="border p-4 rounded shadow-sm"
         style="width: 100%; max-width: 400px;">
 
-        {% for message in messages  %}
+    {% for message in messages  %}
     <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
       <strong>{{message}}</strong>
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -20,6 +20,11 @@
         <div class="form-group mb-3">
             <label for="email" class="form-label">Email:</label>
             <input class="form-control" type="email" id="email" name="email" placeholder="Enter your email" required>
+        </div>
+
+        <div class="form-group mb-3">
+            <label for="username" class="form-label">Username:</label>
+            <input class="form-control" type="text" id="username" name="username" placeholder="username:" required>
         </div>
 
         <div class="form-group mb-3">
