--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@ content %} {% for message in messages %}
 
 <h1>Welcome to dhamaka sale</h1>
 
-{% endblock content %} {% block body %}
+{% endblock content %} {% block body %} {% load static %}
 
 <!-- Portfolio Section -->
 <section id="portfolio" class="portfolio section">
@@ -26,8 +26,46 @@ content %} {% for message in messages %}
     <h2>Welcome to Shop</h2>
     <p>
       <span>Check Our </span><span class="description-title">Products</span>
-      
     </p>
+
+    {% for product,range,nSlides in allProds %}
+    
+    
+    <div class="container">
+      <h3 class="my-3 text-center text-success bg-light"> {{product.0.category}} Flashsale</h3>
+    </div>
+    <div class="container">
+      <div class="row">
+
+
+
+
+        {% for i in product %}
+
+          <div class="col-md-3 mt-3">
+
+            <img src="/media/{{i.image}}" class="card-img-top" alt="">
+                  <div class="card-body">
+                    <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                    <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
+                    <h6 class="card-title">Price:<span id="pricepr{{i.id}}">{{i.price}}</span></h6>
+                    <span id="divpr{{i.id}}" class="divpr">
+
+                      <button id="pr{{i.id}}" class="btn btn-danger btn-sm mt-0">AddToCart</button>
+                    </span>
+
+                    <a href="/media/{{i.image}}"><button class="btn btn-dark btn-sm cart">View</button></a>
+
+                  </div>
+
+
+          </div>
+        
+        {% endfor %}
+      </div>
+    </div>
+    
+    {% endfor %}
   </div>
 </section>
 
