--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,8 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"/>
 
     <!-- Vendor CSS Files -->
     <link
@@ -56,8 +54,16 @@
             <li><a href="/" class="active">Home</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/about">About</a></li>
-            <li><a href="/order">Orders</a></li>
+            <li><a href="/checkout">Checkout</a></li>
             <li><a href="/profile">My Profile</a></li>
+
+            <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" data-bs-title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Cart(<span id="cart">0</span>)</button>
+
+            {% comment %} <button type="button" class="btn btn-danger" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+              Cart(<span id="cart">0</span>)
+            </button> {% endcomment %}
+            {% comment %} <li><a href="/cart" class="bg-danger p-3 m-2">Cart</a></li> {% endcomment %}
+
 
             {% if request.user.is_authenticated %}
             <li><a href="/auth/logout/">Logout</a></li>
@@ -77,7 +83,6 @@
 
             {% endif %}
 
-            <li><a href="/cart" class="bg-danger p-3 m-2">Cart</a></li>
             <li><a href="/contact" class="bg-dark p-3 m-2">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
