--- a/templates/index.html
+++ b/templates/index.html
@@ -1,72 +1,159 @@
-{% extends "base.html" %} {% block title %} Home {% endblock title %} {% block
-content %} {% for message in messages %}
-<div
-  class="alert alert-{{message.tags}} alert-dismissible fade show"
-  role="alert"
->
+{% extends "base.html" %}
+{% block title %} Home {% endblock title %}
+
+{% block content %}
+{% for message in messages %}
+<div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
   <strong>{{message}}</strong>
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-  ></button>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+{% endfor %}
 
-{% endfor %} {% block content %}
+<h1>Welcome to Dhamaka Sale</h1>
 
-<h1>Welcome to dhamaka sale</h1>
+{% endblock content %}
 
-{% endblock content %} {% block body %} {% load static %}
+{% block body %}
+{% load static %}
 
 <!-- Portfolio Section -->
 <section id="portfolio" class="portfolio section">
-  <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Welcome to Shop</h2>
     <p>
       <span>Check Our </span><span class="description-title">Products</span>
     </p>
 
-    {% for product,range,nSlides in allProds %}
-    
-    
+    {% for product, range, nSlides in allProds %}
     <div class="container">
       <h3 class="my-3 text-center text-success bg-light"> {{product.0.category}} Flashsale</h3>
     </div>
     <div class="container">
       <div class="row">
-
-
-
-
         {% for i in product %}
-
-          <div class="col-md-3 mt-3">
-
-            <img src="/media/{{i.image}}" class="card-img-top" alt="">
-                  <div class="card-body">
-                    <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
-                    <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
-                    <h6 class="card-title">Price:<span id="pricepr{{i.id}}">{{i.price}}</span></h6>
-                    <span id="divpr{{i.id}}" class="divpr">
-
-                      <button id="pr{{i.id}}" class="btn btn-danger btn-sm mt-0">AddToCart</button>
-                    </span>
-
-                    <a href="/media/{{i.image}}"><button class="btn btn-dark btn-sm cart">View</button></a>
-
-                  </div>
-
-
+        <div class="col-md-3 mt-3">
+          <img src="/media/{{i.image}}" class="card-img-top" height='200px' width='150px' alt="">
+          <div class="card-body">
+            <h5 class="card-title mt-2" id="namepr{{i.id}}">{{i.product_name}}</h5>
+            <p class="card-text">{{i.descs|slice:"0:53"}}...</p>
+            <h6 class="card-title mb-3">Price:<span id="pricepr{{i.id}}">{{i.price}}</span></h6>
+            <span id="divpr{{i.id}}" class="divpr">
+              <button id="pr{{i.id}}" class="btn btn-danger btn-sm mt-0 cart">AddToCart</button>
+            </span>
+            <a href="/media/{{i.image}}"><button class="btn btn-dark btn-sm">View</button></a>
           </div>
-        
+        </div>
         {% endfor %}
       </div>
     </div>
-    
     {% endfor %}
   </div>
 </section>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" crossorigin="anonymous"></script>
+
+
+
+{% block script %}
+
+<script>
+  //find pout the card from local storage
+
+  if (localStorage.getItem('cart') == null) {
+      var cart = {};
+  } else {
+      cart = JSON.parse(localStorage.getItem('cart'));
+      updateCart(cart);
+
+  }
+  // add or increment code
+
+  // $('.cart').click(function() {
+  $('.divpr').on('click', 'button.cart', function () {
+      var idstr = this.id.toString();
+
+      if (cart[idstr] != undefined) {
+          qty = cart[idstr][0] + 1;
+
+      } else {
+          qty = 1;
+          name = document.getElementById('name' + idstr).innerHTML;
+          price = document.getElementById('price' + idstr).innerHTML;
+          cart[idstr] = [qty, name, price];
+      }
+      updateCart(cart);
+
+      localStorage.setItem('cart', JSON.stringify(cart));
+      document.getElementById('cart').innerHTML = Object.keys(cart).length;
+  });
+  // add pop over to cart
+
+  $('#popcart').popover();
+
+  updatePopover(cart);
+
+  function updatePopover(cart) {
+      console.log('we are  inside update popover');
+      var popStr = "";
+      var popStr = popStr + "<h5> cart for your items in my shopping cart </h5> <div class='mx-2 my-2'>";
+      var i = 1;
+      for (var item in cart) {
+          popStr = popStr + "<b>" + i + "</b>. ";
+          popStr = popStr + document.getElementById('name' + item).innerHTML.slice(0, 19) + "..." + "<b>" + cart[item][0] + "</b>" + "Qty" + '<br>';
+          i = i + 1;
+      }
+
+      popStr = popStr + "</div> <a href='/checkout'><button class='btn btn-success' id='clearCart'>Checkout</button></a>  <button class='btn btn-dark' onclick='clearCart()' id='clearCart'>ClearCart</button>"
+      document.getElementById('popcart').setAttribute('data-content', popStr);
+      $('#popcart').popover('show');
+  }
+
+  function clearCart() {
+      cart = JSON.parse(localStorage.getItem('cart'));
+      for (var item in cart) {
+          document.getElementById('div' + item).innerHTML = '<button id="' + item + '" class="btn btn-success cart">Add to Card</button>'
+      }
+      localStorage.clear();
+      cart = {};
+      updateCart(cart);
+  }
+
+  function updateCart(cart) {
+      var sum = 0;
+      for (var item in cart) {
+          sum = sum + cart[item][0];
+          document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "'class='btn btn-success minus'>-</button> <span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-success plus'> + </button>";
+      }
+      localStorage.setItem('cart', JSON.stringify(cart));
+      document.getElementById('cart').innerHTML = sum;
+      console.log(cart);
+      updatePopover(cart);
+  }
+
+  //if plus or minus button is clicked change the cart as well as the display value
+  $('.divpr').on("click", "button.minus", function () {
+
+      a = this.id.slice(7,);
+      cart['pr' + a][0] = cart['pr' + a][0] - 1;
+      cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
+      document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+      updateCart(cart);
+
+  })
+
+
+  $('.divpr').on("click", "button.plus", function () {
+
+      a = this.id.slice(6,);
+      cart['pr' + a][0] = cart['pr' + a][0] + 1;
+
+      document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+      updateCart(cart);
+
+  })
+</script>
+
+{% endblock script %}
 
 {% endblock body %}
